--- a/proposta-comercial/proposta-gerador.html
+++ b/proposta-comercial/proposta-gerador.html
@@ -36,8 +36,8 @@
             <section class="form-section">
                 <h2>📱 Serviço 1: Social Media</h2>
                 <div class="form-group">
-                    <label for="servicoSocialMedia">Selecione o Plano</label>
-                    <select id="servicoSocialMedia" name="servicoSocialMedia">
+                    <label for="servicoSocialMidia">Selecione o Plano</label>
+                    <select id="servicoSocialMidia" name="servicoSocialMidia">
                         <option value="nao-se-aplica">Não se aplica</option>
                         <option value="start">START - R$ 1.500,00</option>
                         <option value="scale">SCALE - R$ 2.200,00</option>
@@ -59,7 +59,7 @@
                         <option value="nao-se-aplica">Não se aplica</option>
                         <option value="foco">FOCO - R$ 2.400,00</option>
                         <option value="aceleracao">ACELERAÇÃO - R$ 2.800,00</option>
-                        <option value="heat">HEAT - R$ 3.500,00</option>
+                        <option value="heat">DESTAQUE - R$ 3.500,00</option>
                     </select>
                 </div>
                 <div class="form-group entregaveis-container" id="entregaveisTrafegoPago" style="display: none;">
