--- a/proposta-comercial/index.html
+++ b/proposta-comercial/index.html
@@ -210,7 +210,7 @@
             </p>
             
             <div class="buttons">
-                <a href="/gerador" class="btn btn-primary">
+                <a href="proposta-gerador.html" class="btn btn-primary">
                     🧾 Criar Nova Proposta
                 </a>
                 <a href="javascript:void(0)" onclick="mostrarExemplo()" class="btn btn-secondary">
