--- a/proposta-comercial/proposta-gerador-novo.html
+++ b/proposta-comercial/proposta-gerador-novo.html
@@ -321,21 +321,6 @@
                         <label for="emailCliente">E-mail do Cliente</label>
                         <input type="email" id="emailCliente" name="emailCliente" placeholder="contato@empresa.com">
                     </div>
-                    <div class="form-group">
-                        <label for="responsavelProposta">Responsável pela Proposta *</label>
-                        <input type="text" id="responsavelProposta" name="responsavelProposta" required placeholder="Ex: João Silva - Heat Digital">
-                    </div>
-                    <div class="form-group">
-                        <label for="diasValidade">Dias de Validade da Proposta *</label>
-                        <select id="diasValidade" name="diasValidade" required>
-                            <option value="3">3 dias</option>
-                            <option value="5">5 dias</option>
-                            <option value="7" selected>7 dias</option>
-                            <option value="10">10 dias</option>
-                            <option value="15">15 dias</option>
-                            <option value="30">30 dias</option>
-                        </select>
-                    </div>
                 </div>
             </section>
 
@@ -490,7 +475,7 @@
         </div>
     </div>
 
-    <script src="proposta-gerador.js"></script>
+    <script src="proposta-gerador-novo.js"></script>
     <script>
         function toggleEntregaveis(servico) {
             const container = document.getElementById(`entregaveis${servico}`);
