--- a/proposta-comercial/proposta-visualizacao.html
+++ b/proposta-comercial/proposta-visualizacao.html
@@ -1551,7 +1551,12 @@
                 // Verificar se já está expirada antes de iniciar o timer
                 let dataCriacao;
                 if (timestampCriacao.includes('/')) {
-                    dataCriacao = new Date(timestampCriacao.replace(/(\d{2})\/(\d{2})\/(\d{4})/, '$3-$2-$1'));
+                    // Formato brasileiro: dd/mm/aaaa hh:mm:ss
+                    const partes = timestampCriacao.split(' ');
+                    const data = partes[0].split('/');
+                    const hora = partes[1] || '00:00:00';
+                    // Criar data no formato ISO: aaaa-mm-dd hh:mm:ss
+                    dataCriacao = new Date(`${data[2]}-${data[1]}-${data[0]} ${hora}`);
                 } else {
                     dataCriacao = new Date(timestampCriacao);
                 }
@@ -2414,7 +2419,12 @@
             // Converter timestamp para data
             let dataCriacao;
             if (timestampCriacao.includes('/')) {
-                dataCriacao = new Date(timestampCriacao.replace(/(\d{2})\/(\d{2})\/(\d{4})/, '$3-$2-$1'));
+                // Formato brasileiro: dd/mm/aaaa hh:mm:ss
+                const partes = timestampCriacao.split(' ');
+                const data = partes[0].split('/');
+                const hora = partes[1] || '00:00:00';
+                // Criar data no formato ISO: aaaa-mm-dd hh:mm:ss
+                dataCriacao = new Date(`${data[2]}-${data[1]}-${data[0]} ${hora}`);
             } else {
                 dataCriacao = new Date(timestampCriacao);
             }
