--- a/proposta-comercial/proposta-gerador.html
+++ b/proposta-comercial/proposta-gerador.html
@@ -511,9 +511,7 @@
             }
         }
         
-        function gerarLinkProposta() {
-            previewProposta();
-        }
+        // Função gerarLinkProposta() já está definida no proposta-gerador.js
         
         function closeModal() {
             document.getElementById('modalLink').style.display = 'none';
