--- a/proposta-comercial/proposta-visualizacao.html
+++ b/proposta-comercial/proposta-visualizacao.html
@@ -2375,8 +2375,9 @@
             let dataCriacao;
             
             if (timestampCriacao.includes('/')) {
-                // Formato brasileiro: dd/mm/aaaa hh:mm:ss
-                const partes = timestampCriacao.split(' ');
+                // Formato brasileiro: dd/mm/aaaa hh:mm:ss ou dd/mm/aaaa, hh:mm:ss
+                const timestampLimpo = timestampCriacao.replace(',', '');
+                const partes = timestampLimpo.split(' ');
                 const data = partes[0].split('/');
                 const hora = partes[1] || '00:00:00';
                 // Criar data no formato ISO: aaaa-mm-dd hh:mm:ss
