--- a/proposta-comercial/index.html
+++ b/proposta-comercial/index.html
@@ -216,6 +216,9 @@
                 <a href="javascript:void(0)" onclick="mostrarExemplo()" class="btn btn-secondary">
                     👀 Ver Exemplo (1 dia de validade)
                 </a>
+                <a href="admin.html" class="btn btn-secondary">
+                    📊 Painel Admin
+                </a>
             </div>
             
             <div class="features">
