--- a/proposta-comercial/proposta-visualizacao.html
+++ b/proposta-comercial/proposta-visualizacao.html
@@ -1326,7 +1326,7 @@
                 <button class="btn btn-primary" id="btnAceitarPrincipal" onclick="aceitarProposta()">
                     ✅ Aceitar Proposta
                 </button>
-                <a href="https://wa.me/5511999999999" class="btn btn-secondary" target="_blank">
+                <a href="https://wa.me/554731706454" class="btn btn-secondary" target="_blank">
                     📱 Falar no WhatsApp
                 </a>
             </div>
@@ -2306,7 +2306,7 @@
                 <div class="comparacao-table">
                     <div class="plano-comparacao">
                         <h4>START</h4>
-                        <div class="preco">R$ 1.500</div>
+                        <div class="preco" style="visibility:hidden;height:0;margin:0;padding:0;"></div>
                         <ul>
                             <li>3 posts semanais</li>
                             <li>Manual de comunicação</li>
@@ -2318,7 +2318,7 @@
                     </div>
                     <div class="plano-comparacao destaque">
                         <h4>SCALE</h4>
-                        <div class="preco">R$ 2.200</div>
+                        <div class="preco" style="visibility:hidden;height:0;margin:0;padding:0;"></div>
                         <ul>
                             <li>5 posts semanais</li>
                             <li>Manual de comunicação</li>
@@ -2331,7 +2331,7 @@
                     </div>
                     <div class="plano-comparacao">
                         <h4>HEAT</h4>
-                        <div class="preco">R$ 3.200</div>
+                        <div class="preco" style="visibility:hidden;height:0;margin:0;padding:0;"></div>
                         <ul>
                             <li>7 posts semanais</li>
                             <li>Linha editorial premium</li>
@@ -2362,23 +2362,23 @@
                     <p style="color: #E0E0E0; font-size: 0.95rem; line-height: 1.5; margin-bottom: 12px;">Cada plano é recomendado para uma faixa específica de investimento mensal em mídia:</p>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 25px;">
                         <div style="background: rgba(30, 89, 66, 0.2); padding: 12px 16px; border-radius: 10px; font-size: 0.9rem; color: #00E388;">
-                            <strong>FOCO:</strong> Até R$ 5.000/mês
+                            <strong>FOCO:</strong> Plano recomendado para investimento de até R$ 5.000/mês
                         </div>
                         <div style="background: rgba(30, 89, 66, 0.2); padding: 12px 16px; border-radius: 10px; font-size: 0.9rem; color: #00E388;">
-                            <strong>ACELERAÇÃO:</strong> R$ 5.001 - R$ 10.000
+                            <strong>ACELERAÇÃO:</strong> Plano recomendado para investimento entre R$ 5.001 e R$ 10.000/mês
                         </div>
                         <div style="background: rgba(30, 89, 66, 0.2); padding: 12px 16px; border-radius: 10px; font-size: 0.9rem; color: #00E388;">
-                            <strong>DESTAQUE:</strong> Acima de R$ 10.000
+                            <strong>DESTAQUE:</strong> Plano recomendado para investimento acima de R$ 10.000/mês
                         </div>
                     </div>
                 </div>
                 <div class="comparacao-table" style="margin-top: 80px; gap: 30px;">
                     <div class="plano-comparacao" style="background: linear-gradient(180deg, #1a1a1a 0%, #151515 100%); padding: 40px 25px; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);">
                         <h4 style="padding-top: 8px;">FOCO</h4>
-                        <div class="preco">R$ 2.400*</div>
+                        <div class="preco" style="visibility:hidden;height:0;margin:0;padding:0;"></div>
                         <div style="font-size: 0.8rem; color: #ccc; margin-bottom: 12px; font-style: italic; padding-bottom: 4px;">Para validar campanhas com segurança</div>
                         <div style="background: rgba(30, 89, 66, 0.2); padding: 8px 12px; border-radius: 8px; margin: 10px 0; font-size: 0.9rem; font-weight: 600; color: #00E388;">
-                            💰 Até R$ 5.000/mês em mídia
+                            Plano recomendado para investimento de até R$ 5.000/mês em mídia
                         </div>
                         <div style="margin: 20px 0 12px 0; color: #00FF9C; font-size: 0.95rem; border-bottom: 1px solid #1E5942; padding-bottom: 2px; letter-spacing: 0.3px; font-weight: 600;">Execução:</div>
                         <ul style="margin-left: 15px; margin-bottom: 10px;">
@@ -2408,10 +2408,10 @@
                     <div class="plano-comparacao destaque" style="background: linear-gradient(180deg, #1a1a1a 0%, #151515 100%); padding: 40px 25px; border-color: #00FF9C; transform: scale(1.08); box-shadow: 0 15px 40px rgba(0, 255, 156, 0.25); z-index: 2; margin-top: 20px; position: relative;">
                         <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: #D4A93A; color: #000; padding: 6px 16px; border-radius: 15px; font-size: 0.75rem; font-weight: 800;">⭐ MAIS ESCOLHIDO</div>
                         <h4 style="padding-top: 8px;">ACELERAÇÃO</h4>
-                        <div class="preco">R$ 2.800*</div>
+                        <div class="preco" style="visibility:hidden;height:0;margin:0;padding:0;"></div>
                         <div style="font-size: 0.8rem; color: #ccc; margin-bottom: 12px; font-style: italic; padding-bottom: 4px;">Equilíbrio entre custo e performance</div>
                         <div style="background: rgba(30, 89, 66, 0.2); padding: 8px 12px; border-radius: 8px; margin: 10px 0; font-size: 0.9rem; font-weight: 600; color: #00E388;">
-                            💰 R$ 5.001 - R$ 10.000/mês
+                            Plano recomendado para investimento entre R$ 5.001 e R$ 10.000/mês em mídia
                         </div>
                         <div style="margin: 20px 0 12px 0; color: #00FF9C; font-size: 0.95rem; border-bottom: 1px solid #1E5942; padding-bottom: 2px; letter-spacing: 0.3px; font-weight: 600;">Execução:</div>
                         <ul style="margin-left: 15px; margin-bottom: 10px;">
@@ -2440,10 +2440,10 @@
                     </div>
                     <div class="plano-comparacao" style="background: linear-gradient(180deg, #1a1a1a 0%, #151515 100%); padding: 40px 25px; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);">
                         <h4 style="padding-top: 8px;">DESTAQUE</h4>
-                        <div class="preco">R$ 3.500*</div>
+                        <div class="preco" style="visibility:hidden;height:0;margin:0;padding:0;"></div>
                         <div style="font-size: 0.8rem; color: #ccc; margin-bottom: 12px; font-style: italic; padding-bottom: 4px;">Para escalar e dominar o funil</div>
                         <div style="background: rgba(30, 89, 66, 0.2); padding: 8px 12px; border-radius: 8px; margin: 10px 0; font-size: 0.9rem; font-weight: 600; color: #00E388;">
-                            💰 Acima de R$ 10.000/mês
+                            Plano recomendado para investimento acima de R$ 10.000/mês em mídia
                         </div>
                         <div style="margin: 20px 0 12px 0; color: #00FF9C; font-size: 0.95rem; border-bottom: 1px solid #1E5942; padding-bottom: 2px; letter-spacing: 0.3px; font-weight: 600;">Execução:</div>
                         <ul style="margin-left: 15px; margin-bottom: 10px;">
