--- a/proposta-comercial/index.html
+++ b/proposta-comercial/index.html
@@ -6,6 +6,7 @@
     <title>Sistema de Proposta Comercial - Heat Digital</title>
     <link rel="stylesheet" href="proposta-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="menu-lateral.js"></script>
     <style>
         .landing-container {
             min-height: 100vh;
