--- a/proposta-comercial/proposta-gerador.html
+++ b/proposta-comercial/proposta-gerador.html
@@ -6,6 +6,7 @@
   <title>Gerador de Proposta Comercial - Heat Digital</title>
   <link rel="stylesheet" href="./proposta-styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+  <script src="menu-lateral.js"></script>
   <style>
     /* Layout básico da página */
     * { box-sizing: border-box; }
@@ -78,6 +79,10 @@
     <header class="gerador-header">
       <h1>🧾 Gerador de Proposta Comercial</h1>
       <p>Configure todos os parâmetros da proposta para o cliente</p>
+      <div class="auth-controls" style="margin-top:10px; display:flex; gap:10px; justify-content:center; align-items:center; font-size:0.9rem;">
+        <span id="authStatusGerador" class="muted" style="color:#bbb;">Verificando sessão…</span>
+        <button type="button" id="btnLogoutGerador" class="btn-preview" style="padding:8px 12px; font-size:0.85rem; display:none;">Sair</button>
+      </div>
     </header>
 
     <form id="propostaForm" class="proposta-form">
@@ -109,7 +114,10 @@
           </div>
           <div class="form-group fg-responsavel">
             <label for="responsavelProposta">Responsável pela Proposta (Heat Digital) *</label>
-            <input type="text" id="responsavelProposta" name="responsavelProposta" required placeholder="Ex: João Silva - Heat Digital" />
+            <select id="responsavelProposta" name="responsavelProposta" required>
+              <option value="">Selecione o responsável</option>
+            </select>
+            <small style="font-size:0.75rem; color:#888;">Lista de usuários com papel admin/editor</small>
           </div>
           <div class="form-group fg-endereco">
             <label for="enderecoCliente">Endereço Completo *</label>
