--- a/proposta-comercial/proposta-gerador.html
+++ b/proposta-comercial/proposta-gerador.html
@@ -300,8 +300,8 @@
           <p>O cliente escolherá a forma de pagamento ao aceitar a proposta. Opções disponíveis:</p>
           <ul>
             <li>À vista (Pix/Boleto)</li>
-            <li>50% agora + 50% em 30 dias</li>
-            <li>Mensalidade recorrente</li>
+            <li>50% agora (Pix/Boleto) + 50% em 30 dias</li>
+            <li>Mensalidade recorrente (Pix/Boleto)</li>
           </ul>
         </div>
       </section>
