--- a/proposta-comercial/proposta-visualizacao.html
+++ b/proposta-comercial/proposta-visualizacao.html
@@ -3861,6 +3861,20 @@
             if (servicoTrafego && servicoTrafego !== 'nao-se-aplica' && entregaveisTrafegoPago[servicoTrafego]) {
                 textoEntregaveisTrafego = entregaveisTrafegoPago[servicoTrafego];
             }
+            // Regra de exclusividade da Landing Page: somente no plano de 12 meses
+            const tituloRecorrencia = recorrenciaSelecionada?.closest('.option-card')?.querySelector('.title')?.textContent || '';
+            const ehDozeMeses = /12/.test(tituloRecorrencia);
+            if (textoEntregaveisTrafego) {
+                if (!ehDozeMeses) {
+                    textoEntregaveisTrafego = textoEntregaveisTrafego
+                        .split('\n')
+                        .filter(l => !/landing\s*page/i.test(l) && !/\bLP\b/i.test(l))
+                        .join('\n');
+                    textoEntregaveisTrafego += '\nObservação: A Landing Page de alta conversão é exclusiva para contratos com recorrência de 12 meses.';
+                } else {
+                    textoEntregaveisTrafego = textoEntregaveisTrafego.replace(/(Landing\s*Page[^\n]*)/i, '$1 (exclusivo para 12 meses)');
+                }
+            }
             
             // Montar placeholders de comissão/descrição de cobrança
             const params = new URLSearchParams(window.location.search);
