--- a/proposta-comercial/proposta-gerador.html
+++ b/proposta-comercial/proposta-gerador.html
@@ -96,8 +96,8 @@
               <select id="clienteSelecionado" name="clienteSelecionado">
                 <option value="">Carregando clientes…</option>
               </select>
-              <button type="button" id="btnNovoCliente" class="btn-generate" style="padding:10px 14px; display:none;">Cadastrar novo cliente</button>
-              <a href="clientes.html" class="btn-preview" style="text-decoration:none; padding:10px 14px; display:none;">Gerenciar Clientes</a>
+              <button type="button" id="btnNovoCliente" class="btn-generate" style="padding:10px 14px;">Cadastrar novo cliente</button>
+              <a href="clientes" class="btn-preview" style="text-decoration:none; padding:10px 14px;">Gerenciar Clientes</a>
             </div>
             <small style="font-size:0.75rem; color:#888;">Os dados do cliente serão usados automaticamente.</small>
           </div>
